--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,10 @@
 
     <string name="app_name">MutualPay</string>
     <string name="dummy_content">Mutual\nPay</string>
+    <string name="title_activity_user_profile">User Profile</string>
+    <string name="UserName">User Name:</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="PhoneNumber">Phone Number:</string>
 
 </resources>
