--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_group">GroupActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_add_group">AddGroupActivity</string>
+    <string name="title_activity_add_contacts">AddContactsActivity</string>
 
 </resources>
